Fix non-ultra stream shift toggle.

--- a/app/components-react/shared/StreamShiftToggle.m.less
+++ b/app/components-react/shared/StreamShiftToggle.m.less
@@ -6,7 +6,6 @@
 
 .stream-shift-toggle {
   display: flex;
-  font-size: 14px;
   color: var(--title) !important;
 }
 
@@ -15,11 +14,16 @@
   align-items: center;
 }
 
+.label-checkbox {
+  width: 100%;
+  text-wrap: nowrap;
+}
+
 .tooltip {
   display: flex;
   align-items: center;
 }
 
 .beta-badge {
-  margin: 1px 0 0 0px;
+  margin-left: 10px;
 }
